# aws-lambda-actix-web-juniper-example

./: .dockerignore  Cargo.toml  Dockerfile  README.md
src/: graphql_schema.rs  main.rs
